WEB-35566 Overridden methods are listed twice in the completion list